--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 	<!-- the entire body must be written by student -->
 	<main class="main">
 		<img class="img" src="https://images.unsplash.com/photo-1572355286138-8dae8e7ba20d?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8N3x8YmFsbG9vbnxlbnwwfHwwfHx8MA%3D%3D">
-		<div>
+		<div class="div">
 			<h1>Pricing Card</h1>
 			<p>Price: Rs.200</p>
 			<p>Description:Birthday card for your loved one.</p>
